# atalert-python

./: .gitignore  LICENSE  README.md  pyproject.toml
atalert/: __init__.py  atalert.py  integrations.py  shipyard.py  zapier.py
tests/: conftest.py  test_alerting.py  test_decorators.py  test_files.py  test_shipyard.py  test_zapier.py
tests/files/: data.json
