[tool.poetry]
name = "atalert"
version = "0.1.2"
readme = "README.md"
homepage = "https://atalert.dev"
repository = "https://github.com/atadataco/atalert"
description = "Atalert slack alerting service helper module"
authors = ["Kevin Haggerty <kevin@splatcollision.com>"]
license = "MIT"
keywords = ["alert", "slack webhook", "data pipeline", "data engineering", "data pipeline monitoring"]
classifiers = [
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Database",
	"Topic :: Database :: Front-Ends",
	"Topic :: System :: Logging",
	"Topic :: System :: Monitoring",
]
packages = [
    { include = "atalert" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
